# uv-monorepo-demo

./: .gitignore  README.md  build.py  pyproject.toml
demo/apps/project1/: pyproject.toml
demo/apps/project1/src/project1/: main.py  other.py
demo/apps/project2/: pyproject.toml
demo/apps/project2/project2/: main.py
demo/libs/lib1/: pyproject.toml
demo/libs/lib1/src/lib1/: models.py
